Implement no locked funds tests (#302)
* Add `burn-gov` contract

Off-chain only

* Implement tests with fees

* Implement QuickCheck test for no locked funds

* Remove burn endpoint

--- a/mlabs/mlabs-plutus-use-cases.cabal
+++ b/mlabs/mlabs-plutus-use-cases.cabal
@@ -149,7 +149,10 @@ library
     Mlabs.NFT.Contract.BidAuction
     Mlabs.NFT.Contract.Buy
     Mlabs.NFT.Contract.CloseAuction
-    Mlabs.NFT.Contract.Fees
+    Mlabs.NFT.Contract.Gov
+    Mlabs.NFT.Contract.Gov.Aux
+    Mlabs.NFT.Contract.Gov.Fees
+    Mlabs.NFT.Contract.Gov.Query
     Mlabs.NFT.Contract.Init
     Mlabs.NFT.Contract.Mint
     Mlabs.NFT.Contract.OpenAuction
