--- a/MetaLamp/nft-marketplace/plutus-starter.cabal
+++ b/MetaLamp/nft-marketplace/plutus-starter.cabal
@@ -99,6 +99,7 @@ library
       plutus-contract,
       plutus-ledger,
       plutus-ledger-api,
+      plutus-ledger-constraints,
       plutus-pab,
       plutus-tx,
       plutus-tx-plugin,
