--- a/MetaLamp/nft-marketplace/config/plutus-pab.template.yaml
+++ b/MetaLamp/nft-marketplace/config/plutus-pab.template.yaml
@@ -12,9 +12,9 @@ pabWebserverConfig:
   endpointTimeout: 5
 
 walletServerConfig:
-  baseUrl: http://localhost:8090
-  wallet:
-    getWallet: 1
+  tag: RemoteWalletConfig
+  walletSettings:
+    baseUrl: http://localhost:8090
 
 nodeServerConfig:
   mscBaseUrl: http://localhost:9082
