--- a/eleks/oracle/plutus-starter.cabal
+++ b/eleks/oracle/plutus-starter.cabal
@@ -79,6 +79,7 @@ library
       plutus-tx-plugin,
       plutus-tx,
       plutus-ledger,
+      plutus-ledger-constraints,
       plutus-ledger-api,
       plutus-chain-index,
       plutus-chain-index-core,
@@ -174,6 +175,7 @@ executable testnet-oracle-pab
       playground-common -any,
       plutus-contract -any,
       plutus-pab -any,
+      plutus-ledger,
       plutus-use-cases -any,
       prettyprinter -any,
       purescript-bridge,
@@ -203,6 +205,7 @@ executable testnet-mutual-bet-pab
       playground-common -any,
       plutus-contract -any,
       plutus-pab -any,
+      plutus-ledger,
       plutus-use-cases -any,
       prettyprinter -any,
       purescript-bridge,
@@ -245,6 +248,7 @@ executable encode-oracle-request
     base >= 4.9 && < 5,
     cardano-api, 
     cardano-node,
+    cryptonite,
     cardano-crypto,
     cardano-addresses,
     cardano-addresses-cli,
