--- a/eleks/oracle/cabal.project
+++ b/eleks/oracle/cabal.project
@@ -14,19 +14,20 @@ source-repository-package
   type: git
   location: https://github.com/input-output-hk/plutus-apps.git
   subdir:
-     freer-extras
+          doc
           freer-extras
           playground-common
           plutus-chain-index
           plutus-chain-index-core
           plutus-contract
           plutus-ledger
+          plutus-ledger-constraints
           plutus-pab
           plutus-playground-server
           plutus-use-cases
           quickcheck-dynamic
           web-ghc
-  tag: a78e858f77cd3ecb76877351e0832ee5643f09a9
+  tag: 63123ffb527a37ba357e4cb38690625f945710b9
 
 -- We never, ever, want this.
 write-ghc-environment-files: never
@@ -255,14 +256,14 @@ source-repository-package
 -- plutus. If you update plutus, please make sure that all dependencies of plutus
 -- are also updated
 source-repository-package
-  type: git
-  location: https://github.com/input-output-hk/plutus
-  tag: 3f089ccf0ca746b399c99afe51e063b0640af547
-  subdir:
-    plutus-core
-    plutus-ledger-api
-    plutus-tx
-    plutus-tx-plugin
-    word-array
-    prettyprinter-configurable
-    stubs/plutus-ghc-stub
+ type: git
+ location: https://github.com/input-output-hk/plutus
+ tag: 2721c59fd2302b75c4138456c29fd5b509e8340a
+ subdir:
+   plutus-ledger-api
+   word-array
+   prettyprinter-configurable
+   stubs/plutus-ghc-stub
+   plutus-core
+   plutus-tx
+   plutus-tx-plugin
