cardano-serialization and buffer utils in scope for Nami Wallet, obelisk backend builds transactions and returns cbor hash

--- a/use-case-2/backend/backend.cabal
+++ b/use-case-2/backend/backend.cabal
@@ -21,6 +21,7 @@ library
                , dense-linear-algebra
                , dependent-sum
                , dependent-sum-template
+               , directory
                , frontend
                , gargoyle-postgresql
                , gargoyle-postgresql-connect
