add updated cardano serialization libs, serve wasm files, complete nami wallet sign and submit on frontend

--- a/use-case-2/backend/backend.cabal
+++ b/use-case-2/backend/backend.cabal
@@ -38,6 +38,7 @@ library
                , rhyolite-backend-notification-postgres
                , rhyolite-common
                , scientific
+               , snap-core
                , statistics
                , text
                , time
