--- a/MetaLamp/nft-marketplace/plutus-starter.cabal
+++ b/MetaLamp/nft-marketplace/plutus-starter.cabal
@@ -61,10 +61,6 @@ library
       Plutus.Contracts.NftMarketplace.OnChain.Core.Marketplace
       Plutus.Contracts.NftMarketplace.OnChain.Core.NFT
       Plutus.Contracts.NftMarketplace.OnChain.Core.StateMachine
-      Plutus.Contracts.Services.Auction
-      Plutus.Contracts.Services.Auction.Core
-      Plutus.Contracts.Services.Auction.Endpoints
-      Plutus.Contracts.Services.Auction.StateMachine
       Plutus.Contracts.Services.Sale
       Plutus.Contracts.Services.Sale.Core
       Plutus.Contracts.Services.Sale.Endpoints
@@ -139,27 +135,27 @@ executable pab-simulation
     base >= 4.9 && < 5,
     plutus-starter
 
-executable generate-typescript
-  import: lang
-  main-is: Main.hs
-  hs-source-dirs: generate-typescript
-  ghc-options:
-    -threaded
-  build-depends:
-    base >= 4.9 && < 5,
-    aeson-typescript,
-    servant-purescript -any,
-    mtl,
-    directory,
-    lens,
-    aeson,
-    bytestring,
-    -- Plutus:
-    plutus-starter,
-    plutus-pab,
-    plutus-contract,
-    plutus-ledger-api,
-    plutus-tx
+-- executable generate-typescript
+--   import: lang
+--   main-is: Main.hs
+--   hs-source-dirs: generate-typescript
+--   ghc-options:
+--     -threaded
+--   build-depends:
+--     base >= 4.9 && < 5,
+--     aeson-typescript,
+--     servant-purescript -any,
+--     mtl,
+--     directory,
+--     lens,
+--     aeson,
+--     bytestring,
+--     -- Plutus:
+--     plutus-starter,
+--     plutus-pab,
+--     plutus-contract,
+--     plutus-ledger-api,
+--     plutus-tx
         
 test-suite test
     import: lang
@@ -174,8 +170,6 @@ test-suite test
       Marketplace.Fixtures.NFT
       Marketplace.Fixtures.Script
       Marketplace.Fixtures.Wallet
-      Marketplace.Spec.Auction
-      Marketplace.Spec.Bundles
       Marketplace.Spec.CreateNft
       Marketplace.Spec.Sale
       Marketplace.Spec.Start
