complete auto transaction balancing, add validator exe, misc code cleanup

--- a/use-case-2/backend/backend.cabal
+++ b/use-case-2/backend/backend.cabal
@@ -18,6 +18,7 @@ library
                , cardano-prelude
                , common
                , constraints-extras
+               , containers
                , dense-linear-algebra
                , dependent-sum
                , dependent-sum-template
@@ -37,6 +38,7 @@ library
                , rhyolite-backend-db
                , rhyolite-backend-notification-postgres
                , rhyolite-common
+               , safe
                , scientific
                , snap-core
                , statistics
@@ -48,6 +50,7 @@ library
                , vector
                , vessel
                , websockets
+               , which
   exposed-modules:
     Backend
     Backend.Notification
@@ -63,5 +66,7 @@ executable backend
   build-depends: base
                , backend
                , common
+               , containers
                , frontend
                , obelisk-backend
+               , safe
