--- a/mlabs/nix/haskell-nix-cabal.project
+++ b/mlabs/nix/haskell-nix-cabal.project
@@ -265,3 +265,8 @@ source-repository-package
   type: git
   location: https://github.com/input-output-hk/goblins
   tag: cde90a2b27f79187ca8310b6549331e59595e7ba
+
+source-repository-package
+  type: git
+  location: https://gitlab.com/fresheyeball/plutus-tx-spooky
+  tag: 0c409907fa5b6aee4a2f2d18f871b850a8547fdf
