fix nix build error

--- a/use-case-2/backend/backend.cabal
+++ b/use-case-2/backend/backend.cabal
@@ -31,6 +31,7 @@ library
                , lens-aeson
                , monad-logger
                , mtl
+               , obelisk-executable-config-lookup
                , postgresql-simple
                , process
                , resource-pool
