--- a/eleks/oracle/pab-testnet/oracle/testnet-config.yml
+++ b/eleks/oracle/pab-testnet/oracle/testnet-config.yml
@@ -17,7 +17,7 @@ walletServerConfig:
     baseUrl: http://localhost:8090
 
 nodeServerConfig:
-  mscSocketPath: /Users/volodymyr.derecha/projects/plutus/plutus-apps/plutus-pab/test-node/testnet/node.sock
+  mscSocketPath: /tmp/node.socket 
   mscBaseUrl: "localhost"
   mscKeptBlocks: 2160
   mscNetworkId: "1097911063" # Testnet network ID (main net = empty string)
