Fix Cabal and HLS configuration files. (#308)

--- a/mlabs/mlabs-plutus-use-cases.cabal
+++ b/mlabs/mlabs-plutus-use-cases.cabal
@@ -91,6 +91,7 @@ common common-ghc-options
     -fno-strictness
     -fno-warn-orphans
     -fobject-code
+    -fplugin-opt PlutusTx.Plugin:defer-errors
 
 library
   import:  common-imports
