--- a/MetaLamp/nft-marketplace/plutus-starter.cabal
+++ b/MetaLamp/nft-marketplace/plutus-starter.cabal
@@ -50,23 +50,6 @@ library
       Plutus.Abstract.Percentage
       Plutus.Abstract.PercentageInterface
       Plutus.Abstract.RemoteData
-      Plutus.Contracts.NftMarketplace.Endpoints
-      Plutus.Contracts.NftMarketplace.OffChain.ID
-      Plutus.Contracts.NftMarketplace.OffChain.Info
-      Plutus.Contracts.NftMarketplace.OffChain.Owner
-      Plutus.Contracts.NftMarketplace.OffChain.Serialization
-      Plutus.Contracts.NftMarketplace.OffChain.User
-      Plutus.Contracts.NftMarketplace.OnChain.Core
-      Plutus.Contracts.NftMarketplace.OnChain.Core.ID
-      Plutus.Contracts.NftMarketplace.OnChain.Core.Marketplace
-      Plutus.Contracts.NftMarketplace.OnChain.Core.NFT
-      Plutus.Contracts.NftMarketplace.OnChain.Core.StateMachine
-      Plutus.Contracts.Services.Sale
-      Plutus.Contracts.Services.Sale.Core
-      Plutus.Contracts.Services.Sale.Endpoints
-      Plutus.Contracts.Services.Sale.StateMachine
-      Plutus.PAB.Simulation
-      Plutus.PAB.MarketplaceContracts
       -- testnet MVP version (without state machines)
       Plutus.AbstractTestnetMVP.TxUtils
       Plutus.AbstractTestnetMVP.OutputValue
@@ -74,15 +57,18 @@ library
       Plutus.TestnetMVP.OffChain.Owner
       Plutus.TestnetMVP.OffChain.User
       Plutus.TestnetMVP.OnChain.NFT
+      Plutus.TestnetMVP.OnChain.ID
       Plutus.TestnetMVP.OnChain.Script
       Plutus.TestnetMVP.OnChain.Validator
       Plutus.TestnetMVP.OffChain.Endpoints
+      Plutus.TestnetMVP.OffChain.ID
+      Plutus.TestnetMVP.OffChain.Serialization
       Plutus.TestnetMVP.PAB.MarketplaceContracts
       Plutus.TestnetMVP.PAB.Simulation
       Plutus.TestnetMVP.Services.Sale.Endpoints
       Plutus.TestnetMVP.Services.Sale.Script
       Plutus.TestnetMVP.Services.Sale.Validator
-
+      
     build-depends:
       QuickCheck,
       aeson,
@@ -123,27 +109,6 @@ executable pab-demo
   import: lang
   main-is: Main.hs
   hs-source-dirs: pab-demo
-  ghc-options:
-    -threaded
-  build-depends:
-    base >= 4.9 && < 5,
-    plutus-starter
-
-executable pab-app
-  import: lang
-  main-is: Main.hs
-  hs-source-dirs: pab-app
-  ghc-options:
-    -threaded
-  build-depends:
-    base >= 4.9 && < 5,
-    plutus-starter,
-    plutus-pab
-
-executable pab-simulation
-  import: lang
-  main-is: Main.hs
-  hs-source-dirs: pab-simulation
   ghc-options:
     -threaded
   build-depends:
