migrate to mock wallet api

--- a/eleks/oracle/games-web-app/.env
+++ b/eleks/oracle/games-web-app/.env
@@ -1,3 +1,4 @@
-REACT_APP_GAME_URL = 'http://localhost:8081'
-REACT_APP_MUTUAL_BET_URL = 'http://localhost:8082'
-REACT_APP_BET_PAB_URL = 'http://localhost:9080/api/contract'
+REACT_APP_GAME_URL='http://localhost:8081'
+REACT_APP_WALLET_URL='http://localhost:9081'
+REACT_APP_WALLETS = '[{"name":"Wallet 1","id":"872cb83b5ee40eb23bfdab1772660c822a48d491"},{"name":"Wallet 2","id":"7ce812d7a4770bbf58004067665c3a48f28ddd58"},{"name":"Wallet3","id":"c30efb78b4e272685c1f9f0c93787fd4b6743154"},{"name":"Wallet4","id":"5f5a4f5f465580a5500b9a9cede7f4e014a37ea8"}]'
+REACT_APP_BET_PAB_URL='http://localhost:9080/api/contract'
