--- a/MetaLamp/nft-marketplace/cabal.project
+++ b/MetaLamp/nft-marketplace/cabal.project
@@ -27,7 +27,7 @@ source-repository-package
     plutus-use-cases
     quickcheck-dynamic
     web-ghc
-  tag: ec38c2a63cae5d7f798d094a510be89802e084f3
+  tag: e8c5f532e5563c6638c612f6d8dfba9580813c94
 
 
 -- The following sections are copied from the 'plutus-apps' repository cabal.project at the revision
@@ -98,13 +98,13 @@ source-repository-package
 source-repository-package
   type: git
   location: https://github.com/input-output-hk/cardano-crypto.git
-  tag: 07397f0e50da97eaa0575d93bee7ac4b2b2576ec
+  tag: f73079303f663e028288f9f4a9e08bcca39a923e
 
 -- Copied from plutus-core
 source-repository-package
   type: git
   location: https://github.com/input-output-hk/cardano-base
-  tag: 4ea7e2d927c9a7f78ddc69738409a5827ab66b98
+  tag: 654f5b7c76f7cc57900b4ddc664a82fc3b925fb0
   subdir:
     base-deriving-via
     binary
@@ -121,7 +121,7 @@ source-repository-package
 source-repository-package
   type: git
   location: https://github.com/input-output-hk/cardano-prelude
-  tag: fd773f7a58412131512b9f694ab95653ac430852
+  tag: bb4ed71ba8e587f672d06edf9d2e376f4b055555
   subdir:
     cardano-prelude
     cardano-prelude-test
@@ -136,9 +136,10 @@ source-repository-package
 
 source-repository-package
   type: git
-  location: https://github.com/j-mueller/cardano-wallet
-  tag: 6be73ab852c0592713dfe78218856d4a8a0ee69e
+  location: https://github.com/input-output-hk/cardano-wallet
+  tag: 760140e238a5fbca61d1b286d7a80ece058dc729
   subdir:
+    lib/dbvar
     lib/text-class
     lib/strict-non-empty-containers
     lib/core
@@ -152,7 +153,7 @@ source-repository-package
 source-repository-package
   type: git
   location: https://github.com/input-output-hk/ouroboros-network
-  tag: 1f4973f36f689d6da75b5d351fb124d66ef1057d
+  tag: d613de3d872ec8b4a5da0c98afb443f322dc4dab
   subdir:
     monoidal-synchronisation
     typed-protocols
@@ -196,8 +197,9 @@ source-repository-package
 
 source-repository-package
   type: git
-  location: https://github.com/input-output-hk/cardano-ledger-specs
+  location: https://github.com/input-output-hk/cardano-ledger
   tag: bf008ce028751cae9fb0b53c3bef20f07c06e333
+  --sha256: 0my3801w1vinc0kf5yh9lxl6saqxgwm6ccg0vvzi104pafcwwcqx
   subdir:
     byron/ledger/impl
     cardano-ledger-core
@@ -224,12 +226,17 @@ source-repository-package
 source-repository-package
   type: git
   location: https://github.com/input-output-hk/cardano-node.git
-  tag: b6ca519f97a0e795611a63174687e6bb70c9f752
+  tag: 4f65fb9a27aa7e3a1873ab4211e412af780a3648
   subdir:
     cardano-api
     cardano-node
     cardano-cli
-    cardano-config
+
+source-repository-package
+  type: git
+  location: https://github.com/input-output-hk/cardano-config
+  tag: e9de7a2cf70796f6ff26eac9f9540184ded0e4e6
+  --sha256: 1wm1c99r5zvz22pdl8nhkp13falvqmj8dgkm8fxskwa9ydqz01ld
 
 source-repository-package
   type: git
@@ -254,10 +261,10 @@ source-repository-package
   location: https://github.com/input-output-hk/plutus
   tag: 2721c59fd2302b75c4138456c29fd5b509e8340a
   subdir:
-    plutus-core
     plutus-ledger-api
-    plutus-tx
-    plutus-tx-plugin
     word-array
     prettyprinter-configurable
     stubs/plutus-ghc-stub
+    plutus-core
+    plutus-tx
+    plutus-tx-plugin
