--- a/use-case-2/config/backend/dappBackendConfig.json
+++ b/use-case-2/config/backend/dappBackendConfig.json
@@ -4,6 +4,7 @@
 , "_dappBackendConfig_contractOwnerSignKeyPath" : "./keys/payment.skey"
 , "_dappBackendConfig_contractScriptAddress" : "addr_test1wpnjsv28crcw4908vm9ueeag0lczjdgdadmzz292yyym4esvgefz7"
 , "_dappBackendConfig_contractScriptPath" : "/home/zigpolymath/Documents/Obsidian/bobTheBuilder9/plutus-use-cases/use-case-2/dep/plutus/plutus-use-cases/uniswapPlutusScript.plutus"
+, "_dappBackendConfig_validatorExePath" : "./static/plutus-raw-swap"
 , "_dappBackendConfig_initPoolValA" : 900000000
 , "_dappBackendConfig_initPoolValB" : 314150
 }
