Add marketplace validator

--- a/mlabs/mlabs-plutus-use-cases.cabal
+++ b/mlabs/mlabs-plutus-use-cases.cabal
@@ -113,6 +113,7 @@ library
     Mlabs.Deploy.Governance
     Mlabs.Deploy.Nft
     Mlabs.Deploy.Utils
+    Mlabs.EfficientNFT.Marketplace
     Mlabs.EfficientNFT.Token
     Mlabs.Emulator.App
     Mlabs.Emulator.Blockchain
