--- a/mlabs/mlabs-plutus-use-cases.cabal
+++ b/mlabs/mlabs-plutus-use-cases.cabal
@@ -119,6 +119,7 @@ library
     Mlabs.EfficientNFT.Contract.ChangeOwner
     Mlabs.EfficientNFT.Contract.SetPrice
     Mlabs.EfficientNFT.Contract.MarketplaceDeposit
+    Mlabs.EfficientNFT.Contract.MarketplaceRedeem
     Mlabs.EfficientNFT.Contract.Mint
     Mlabs.EfficientNFT.Marketplace
     Mlabs.EfficientNFT.Token
