wip: Efficient NFT sctipr test - token mint happy path

--- a/mlabs/mlabs-plutus-use-cases.cabal
+++ b/mlabs/mlabs-plutus-use-cases.cabal
@@ -296,6 +296,8 @@ test-suite mlabs-plutus-use-cases-tests
     Test.NftStateMachine.Logic
     Test.Utils
     Test.EfficientNFT.Size
+    Test.EfficientNFT.Script.TokenMint
+    Test.EfficientNFT.Script.Values
 
   default-extensions:
     OverloadedStrings
