--- a/mlabs/mlabs-plutus-use-cases.cabal
+++ b/mlabs/mlabs-plutus-use-cases.cabal
@@ -120,6 +120,7 @@ library
     Mlabs.EfficientNFT.Contract.SetPrice
     Mlabs.EfficientNFT.Contract.MarketplaceBuy
     Mlabs.EfficientNFT.Contract.MarketplaceDeposit
+    Mlabs.EfficientNFT.Contract.MarketplaceSetPrice
     Mlabs.EfficientNFT.Contract.MarketplaceRedeem
     Mlabs.EfficientNFT.Contract.Mint
     Mlabs.EfficientNFT.Marketplace
