--- a/mlabs/mlabs-plutus-use-cases.cabal
+++ b/mlabs/mlabs-plutus-use-cases.cabal
@@ -311,6 +311,7 @@ test-suite mlabs-plutus-use-cases-tests
     Test.Utils
     Test.EfficientNFT.Size
     Test.EfficientNFT.Script.TokenMint
+    Test.EfficientNFT.Script.TokenChangePrice
     Test.EfficientNFT.Script.Values
 
   default-extensions:
