--- a/mlabs/mlabs-plutus-use-cases.cabal
+++ b/mlabs/mlabs-plutus-use-cases.cabal
@@ -288,6 +288,9 @@ test-suite mlabs-plutus-use-cases-tests
 
   other-modules:
     Test.Demo.Contract.Mint
+    Test.EfficientNFT.Script.TokenChangeOwner
+    Test.EfficientNFT.Script.TokenMint
+    Test.EfficientNFT.Script.Values
     Test.EfficientNFT.Size
     Test.Governance.Contract
     Test.Governance.Init
@@ -309,9 +312,6 @@ test-suite mlabs-plutus-use-cases-tests
     Test.NftStateMachine.Init
     Test.NftStateMachine.Logic
     Test.Utils
-    Test.EfficientNFT.Size
-    Test.EfficientNFT.Script.TokenMint
-    Test.EfficientNFT.Script.Values
 
   default-extensions:
     OverloadedStrings
