--- a/mlabs/mlabs-plutus-use-cases.cabal
+++ b/mlabs/mlabs-plutus-use-cases.cabal
@@ -313,6 +313,7 @@ test-suite mlabs-plutus-use-cases-tests
     Test.EfficientNFT.Size
     Test.EfficientNFT.Script.TokenMint
     Test.EfficientNFT.Script.Values
+    Test.EfficientNFT.Trace
 
   default-extensions:
     OverloadedStrings
