--- a/mlabs/mlabs-plutus-use-cases.cabal
+++ b/mlabs/mlabs-plutus-use-cases.cabal
@@ -292,6 +292,7 @@ test-suite mlabs-plutus-use-cases-tests
     Test.EfficientNFT.Script.TokenChangeOwner
     Test.EfficientNFT.Script.TokenChangePrice
     Test.EfficientNFT.Script.TokenMint
+    Test.EfficientNFT.Script.TokenUnstake
     Test.EfficientNFT.Script.Values
     Test.EfficientNFT.Size
     Test.EfficientNFT.Trace
